# dgm2xyz

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  dxf-samples.md  requirements.md  roadmap.md
scripts/: package_release.ps1
src/app_win32/: main.cpp
src/cad_dwg/: DwgPointReader.cpp
src/cad_dwg/include/dgm2xyz/: DwgPointReader.h
src/cad_dxf/: DxfPointReader.cpp
src/cad_dxf/include/dgm2xyz/: DxfPointReader.h
src/converter_core/: Conversion.cpp  DrawingPreview.cpp  XyzWriter.cpp
src/converter_core/include/dgm2xyz/: CadPointReader.h  Conversion.h  DrawingPreview.h  XyzWriter.h
tests/: core_tests.cpp
